feat: css modif

--- a/public/markidea.css
+++ b/public/markidea.css
@@ -7,3 +7,6 @@
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currentlynot supported by any browser */
 }
+.dark-backgroud{
+    
+}
