--- a/src/assets/vditor.css
+++ b/src/assets/vditor.css
@@ -22,7 +22,7 @@
  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
- * 删除 .vditor-toolbar__item .vditor-tooltipped   下 font-size = 0
+  * 删除 .vditor-toolbar__item .vditor-tooltipped   下 font-size = 0
  * 修改  .vditor 下 --toolbar-background-color  为 # fffffff   --textarea-background-color 为#ffffff
  * 修改 --toolbar-icon-hover-color 为 #000000
  * 修改  .vditor-tooltipped::after background 为 #f9f8f7  color为#000
@@ -403,7 +403,7 @@
 	background-color: transparent;
 	height: var(--toolbar-height);
 	width: 25px;
-	box-sizing: border-box
+	box-sizing: border-box;
 }
 
 .vditor-toolbar__item .vditor-tooltipped:focus {
@@ -1408,7 +1408,12 @@
 	width: 250px;
 	border-right: 1px solid var(--border-color);
 	background-color: var(--panel-background-color);
-	display: none
+	display: none;
+}
+
+.vditor-outline--right {
+	border-right: 0;
+	border-left: 1px solid var(--border-color)
 }
 
 .vditor-outline::-webkit-scrollbar {
@@ -1430,14 +1435,22 @@
 	align-items: center;
 	padding: 5px 10px;
 	cursor: pointer;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 	color: var(--textarea-text-color)
+}
+
+.vditor-outline li>span svg {
+	height: 10px;
+	width: 10px
 }
 
 .vditor-outline li>span:hover {
 	color: var(--toolbar-icon-hover-color)
+}
+
+.vditor-outline li>span span {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis
 }
 
 .vditor-outline__title {
@@ -1449,10 +1462,9 @@
 
 .vditor-outline__action {
 	transition: all .15s ease-in-out;
-	height: 10px;
-	width: 10px;
 	fill: currentColor;
-	margin-right: 5px
+	margin-right: 5px;
+	flex-shrink: 0
 }
 
 .vditor-outline__action--close {
